[package]
name = "tinywasm-playground"
version = "0.1.0"
edition = "2021"
authors = ["Robert Garrett <robertgarrett404@gmail.com"]
description = "A dummy project for learning to do WASM things with Rust"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.13.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "ImageData",
    "Response",
    "Window"
]}
